# gazebo_uav_usv_landing

./: .gitignore  .gitmodules  CLAUDE.md
docker/: Dockerfile  README.md  entrypoint.sh  run_demo.sh  run_takeoff_land_demo.sh
reports/: usv_simulator.md
ros/: .catkin_workspace
ros/src/ros_landing/ar_code_landing/: CMakeLists.txt  README.md  package.xml
ros/src/ros_landing/ar_code_landing/config/: landing_params.yaml
ros/src/ros_landing/ar_code_landing/launch/: ar_code_landing.launch  climb_test.launch  start_uav.launch  usv_uav_gimbal_landing.launch
ros/src/ros_landing/ar_code_landing/scripts/: ar_landing_controller_node.py  ar_landing_sm_node.py  cleanup_after_close.sh  cleanup_session.sh  climb_test_node.py  gimbal_aruco_tracker_node.py  spawn_model_idempotent.py  spawn_platform.py  trigger_drone_spawn.py  wait_and_launch.sh
ros/src/ros_landing/ocean_rangefinder/: CMakeLists.txt  package.xml
ros/src/ros_landing/ocean_rangefinder/launch/: bridge.launch
ros/src/ros_landing/ocean_rangefinder/scripts/: check_garmin_hits.py  range_corrector.py
ros/src/ros_landing/uav_landing_demo/: CMakeLists.txt  package.xml
ros/src/ros_landing/uav_landing_demo/config/: usv_motion_params.yaml
ros/src/ros_landing/uav_landing_demo/launch/: demo_sequence.launch  moving_usv_env.launch
ros/src/ros_landing/uav_landing_demo/models/: demo_landing_platform.sdf
ros/src/ros_landing/uav_landing_demo/reports/: dynamic_env_demo.md
ros/src/ros_landing/uav_landing_demo/scripts/: demo_annotated_image_node.py  usv_motion_node.py
ros/src/ros_landing/uav_landing_demo/scripts/follow_landing/: dev_env.sh  px4_open_arming.py  run_follow_landing.sh  run_takeoff_land_demo.sh  usv_ar_relpos_estimator_node.py  usv_bezier_predictor_node.py  usv_follow_logger.py  usv_gimbal_ff_node.py  usv_motion_tracker_node.py  usv_mppi_l1.py  usv_perception_selector_node.py  usv_uwb_ekf_node.py  usv_uwb_follow_controller_node.py  usv_uwb_mpc.py  usv_uwb_sim_node.py
ros/src/ros_landing/uav_landing_evaluator/: CMakeLists.txt  README.md  package.xml
ros/src/ros_landing/uav_landing_evaluator/config/: evaluator_params.yaml
ros/src/ros_landing/uav_landing_evaluator/launch/: landing_evaluator.launch
ros/src/ros_landing/uav_landing_evaluator/models/drop_uav/: model.sdf
ros/src/ros_landing/uav_landing_evaluator/models/landing_pad_sensor/: model.sdf
ros/src/ros_landing/uav_landing_evaluator/models/usv_deck/: model.sdf
ros/src/ros_landing/uav_landing_evaluator/scripts/: landing_evaluator_node.py
ros/src/ros_landing/uav_landing_evaluator/worlds/: drop_test.world
ros/src/ros_landing/uav_landing_gui/: CMakeLists.txt  package.xml
ros/src/ros_landing/uav_traj_landing/: CMakeLists.txt  README.md  package.xml
ros/src/ros_landing/uav_traj_landing/config/: landing_params.yaml  quad_params.yaml
ros/src/ros_landing/uav_traj_landing/launch/: traj_landing.launch
ros/src/ros_landing/uav_traj_landing/scripts/: traj_landing_controller_node.py  traj_landing_sm_node.py
ros/src/ros_landing/uav_traj_landing/scripts/controllers/: __init__.py  base.py  mpc.py  pid.py  smc.py
