<?xml version="1.0"?>
<package format="2">
  <name>ar_code_landing</name>
  <version>0.1.0</version>
  <description>
    GPS-denied autonomous landing on the Otter USV using nested ArUco/AprilTag
    pose estimation, Garmin rangefinder altitude, and pure MAVROS attitude control.

    Pipeline:
      aruco_pose_estimator (outer AprilTag 36h11, ID=10)
        → gimbal_aruco_tracker (keeps gimbal centred on deck)
        → ar_landing_controller (attitude + thrust, 50 Hz)
        → ar_landing_sm (state machine: PRE_ARMED→ARMING→CLIMBING→ALIGN→DESCEND→LANDED)

    No GPS, no MRS goto, no global position reference.
  </description>
  <maintainer email="nttputus@gmail.com">t-thanh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>

  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
</package>
