<?xml version="1.0"?>
<package format="2">
  <name>ocean_rangefinder</name>
  <version>1.0.0</version>
  <description>Virtual ocean surface rangefinder filter.</description>
  <maintainer email="todo@todo.com">t-thanh</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
</package>
