<?xml version="1.0"?>
<package format="2">
  <name>uav_landing_demo</name>
  <version>0.1.0</version>
  <description>UAV autonomous landing on a moving Otter USV with sea-state simulation.</description>
  <maintainer email="nttputus@gmail.com">t-thanh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Runtime: Gazebo world + MRS drone spawner + UAV gimbal -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>otter_gazebo</exec_depend>
  <exec_depend>usv_worlds</exec_depend>
  <exec_depend>uav_gimbal</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
</package>
