<?xml version="1.0"?>
<package format="2">
  <name>uav_landing_gui</name>
  <version>0.1.0</version>
  <description>
    Qt5 GUI for monitoring and controlling the UAV-USV autonomous landing demo.
    Provides arming, takeoff, landing mode selection, live telemetry display,
    and evaluator result visualization.
  </description>
  <maintainer email="nttputus@gmail.com">t-thanh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rospy</build_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
</package>
