<?xml version="1.0"?>
<package format="2">
  <name>uav_traj_landing</name>
  <version>0.1.0</version>
  <description>
    GPS-denied autonomous landing on the Otter USV using time-optimal trajectory
    planning and a Sliding Mode Controller (Super-Twisting Algorithm) for
    trajectory tracking.

    Architecture mirrors ar_code_landing but replaces the altitude/position PID
    with:
      1. Minimum-jerk polynomial trajectory (default, no extra deps)
         — or time-optimal trajectory via rpg_time_optimal (optional)
      2. Sliding Mode Controller with Super-Twisting Algorithm for tracking
         (adapted from CrazyTraj/lsy_drone_racing/control/sliding_mode_controller.py)

    The gimbal_aruco_tracker_node from ar_code_landing is reused unchanged.
    Only the controller and state machine nodes are new.
  </description>
  <maintainer email="nttputus@gmail.com">t-thanh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>

  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
</package>
